# malphasos/src/main/java/com/malphasos/malphasos/equipment/infrastructure/input/model/request/ClientEquipmentUpdateRequest.java
@@ -11,5 +11,8 @@ import java.time.LocalDate;
 public record ClientEquipmentUpdateRequest(
         @Size(max = 50) String numeroInventario,
         @PastOrPresent(message = "Un equipo no se compro en el futuro") LocalDate fechaCompra,
-        @PositiveOrZero(message = "El valor de compra no puede ser negativo") Long valorCompra) {
+        @PositiveOrZero(message = "El valor de compra no puede ser negativo") Long valorCompra,
+        @Size(max = 50) @Schema(description = "El codigo que el cliente le pone a su maquina")
+        String codigoInterno,
+        @Size(max = 100) @Schema(description = "Quien vendio esta maquina") String proveedor) {
 }
